--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,10 @@
         <select id="model-select">
             <option value="chatgpt" selected>ChatGPT (Improved version of GPT-3 and can understand as well as generate natural language or code)</option>
             <option value="gpt">GPT-3 (Understand and generate natural language )</option>
+            <option value="gpt-4">GPT-4</option>
+            <option value="gpt-4-0613">GPT-4 Snapshot (June 13th 2023)</option>
+            <option value="gpt-4-32k">GPT-4 with 32k tokens</option>
+            <option value="gpt-4-32k-0613">GPT-4-32k Snapshot (June 13th 2023)</option>
             <option value="image">Create Image (Create AI image using DALL·E models)</option>
             <option value="whisper">Whisper(AI speech recognition model)</option>
         </select>
